clusters/home/heimdall.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heimdall-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: heimdall
  name: heimdall
  namespace: heimdall-ns
  selfLink: /apis/apps/v1/namespaces/default/deployments/heimdall
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: heimdall
    spec:
      containers:
      - image: linuxserver/heimdall
        imagePullPolicy: Always
        name: heimdall
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: heimdall
          mountPath: /config
        ports:
        - containerPort: 80
      volumes:
      - name: heimdall
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-heimdall
  namespace: heimdall-ns
spec:
  rules:
  - host: heimdall.marms.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: heimdall
            port:
              number: 80
  ingressClassName: nginx
