clusters/home/webtop.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webtop-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webtop
  name: webtop
  namespace: webtop-ns
  selfLink: /apis/apps/v1/namespaces/default/deployments/webtop
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: webtop
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webtop
    spec:
      containers:
      - image: lscr.io/linuxserver/webtop
        imagePullPolicy: Always
        name: webtop
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 3000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webtop
  namespace: webtop-ns
spec:
  rules:
  - host: webtop.marms.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webtop
            port:
              number: 80
  ingressClassName: nginx
